--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
         <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
       </div>
+      <div class="bouncing-arrow">
+        <div class="arrow animated bounce">
+          <i class="fas fa-angle-double-down fa-2x text-warning" aria-hidden="true"></i>
+        </div>
+      </div>
     </div>
   </header>
 
